--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.0",
+    "firebase-admin": "^11.0.0",
+    "next": "^12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.6.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/jest": "^28.1.4",
