--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^18.0.1",
     "@types/react": "^18.0.14",
     "autoprefixer": "^10.4.7",
+    "cookies-next": "^2.1.1",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "firebase": "^9.8.4",
