--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest-environment-jsdom": "^28.1.2",
     "next-seo": "^5.4.0",
     "postcss": "^8.4.14",
+    "react-node-inject": "^1.1.3",
     "tailwindcss": "^3.1.4",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
