--- a/.env.production
+++ b/.env.production
@@ -13,3 +13,14 @@ NEXT_PUBLIC_FIREBASE_APP_ID=
 FIREBASE_PROJECT_ID=
 FIREBASE_PRIVATE_KEY=
 FIREBASE_CLIENT_EMAIL=
+
+# Stripe product identifiers for subscriptions
+# This is your publishable API key from Stripe.
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_API_KEY=
+
+# Please enter your Stripe product price API ID here.
+NEXT_PUBLIC_STRIPE_PRICE_API_ID=
+
+# Stripe credentials for Stripe Server SDK
+# These values are considered secrets intended for the server only.
+STRIPE_SECRET_KEY=
