--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase-admin": "^11.0.0",
     "next": "^12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^9.13.0"
   },
   "devDependencies": {
     "@headlessui/react": "^1.6.5",
@@ -33,7 +34,7 @@
     "jest-environment-jsdom": "^28.1.2",
     "next-seo": "^5.4.0",
     "postcss": "^8.4.14",
-    "react-node-inject": "^1.1.3",
+    "react-node-inject": "^1.2.1",
     "tailwindcss": "^3.1.4",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
